--- a/spring-cloud/gateway/build.gradle
+++ b/spring-cloud/gateway/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    // [N]:arm64
+    // [N]:sb2.7
     id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 
@@ -15,7 +15,7 @@ repositories {
 }
 
 ext {
-    // [N]:arm64
+    // [N]:sb2.7
     set('springCloudVersion', "2021.0.3")
 }
 
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
     implementation 'org.springframework.retry:spring-retry'
 
-    // [N]:arm64
+    // [N]:arm64 - See https://github.com/netty/netty/issues/11693
     implementation group: 'io.netty', name: 'netty-resolver-dns-native-macos', classifier: 'osx-aarch_64'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
