--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -114,7 +114,7 @@ services:
       retries: 60
 
   mysql:
-    # [?]:arm64]:mysql8 - Author's version was 8.0.30
+    # [?]:img:arm64]:mysql8 - Author's version was 8.0.30
     image: mysql:8.0.31
 
     mem_limit: 512m
@@ -132,7 +132,7 @@ services:
       retries: 60
 
   kafka:
-    # [?]:arm64 - Author's image was confluentinc/cp-kafka:7.2.1
+    # [?]:img:arm64 - Author's image was confluentinc/cp-kafka:7.2.1
     image: confluentinc/cp-kafka:7.3.0.arm64
     restart: always
     mem_limit: 1024m
@@ -149,7 +149,7 @@ services:
       - zookeeper
 
   zookeeper:
-    # [?]:arm64 - Author's image was confluentinc/cp-zookeeper:7.2.1
+    # [?]:img:arm64 - Author's image was confluentinc/cp-zookeeper:7.2.1
     image: confluentinc/cp-zookeeper:7.3.0
     restart: always
 
