--- a/kubernetes/helm/components/mysql/values.yaml
+++ b/kubernetes/helm/components/mysql/values.yaml
@@ -3,8 +3,8 @@ fullnameOverride: mysql
 image:
   repository: registry.hub.docker.com/library
   name: mysql
-  # [N]:arm64]:mysql8
-  tag: 8.0.31
+  # [N]:arm64]:mysql8 - Author's version is 8.0.30, mine was 8.0.31
+  tag: 8.0.30
   pullPolicy: IfNotPresent
   # [N]:arm64]:mysql8 See https://stackoverflow.com/a/64284869/904231
   # args:
